--- a/eCommerce/templates/base.html
+++ b/eCommerce/templates/base.html
@@ -35,6 +35,8 @@
   <script type="text/javascript">
     const user = "{{ request.user }}"
 
+    const total = "{{ cartTotal }}"
+
     function getToken(name) {
       let cookieValue = null;
       if (document.cookie && document.cookie !== '') {
