--- a/eCommerce/templates/product/product.html
+++ b/eCommerce/templates/product/product.html
@@ -48,7 +48,7 @@
                   </div>
 
                   <div class="Sort-by">
-                    <label>Size</label>
+                    <label>Available sizes (Please select from dropdown)</label>
                     <select class="selectpicker form-control" id="select-by-size">
                       {% for size in sizes %}
                       <option value="#">{{ size }}</option>
@@ -56,7 +56,7 @@
                     </select>
                   </div>
                   <div class="Color">
-                    <label>Color</label>
+                    <label>Available colors (Please select from dropdown)</label>
                     <select class="selectpicker form-control" id="select-by-color">
                       {% for color in colors %}
                       <option value="#">{{ color }}</option>
