--- a/eCommerce/templates/base.html
+++ b/eCommerce/templates/base.html
@@ -13,8 +13,8 @@
   <meta content="" name="description">
   <meta content="" name="author">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-  <link rel="icon" type="image/png" href="images/favicon.png">
-  <link rel="apple-touch-icon" href="images/favicon.png">
+  <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
+  <!-- <link rel="apple-touch-icon" href="images/favicon.png"> -->
 
   {# Global stylesheets #}
   <link href="{% static 'Bootstrap/css/bootstrap.css' %}" rel="stylesheet">
